# thesis

./: .gitignore  .gitmodules  CMakeLists.txt  EVALUATION.md  Makefile  README.md  config.yaml  test.py
data/: data.csv  data_baldo.csv  data_hca.csv
figures/: synchronization.drawio
include/: implementation.hpp
openmp/: Makefile
plots/: collect_data.py  collect_data_papi.ipynb  cpus.ipynb  frontiers.ipynb  papi.ipynb  papi_data.csv  plots.ipynb
pthreads/: Makefile
scripts/: cluster_config.yaml  compile.sh  compile.yaml  compile_brah.sh  compile_frontier.yaml  compile_hca.sh  compile_papi.yaml  configs.yaml  datasets.py  downloader.sh  frontiers.ipynb  frontiers.sh  gather_results_from_sout.py  jobs_complete.yaml  jobs_frontier.yaml  jobs_papi.yaml  matrices.yaml  papi.sh  plots.ipynb  plots.py  run.sh  run_all.sh  run_hpc_unitn.sh
slides/: .gitignore  00 Introduction.tex  00_Introduction.tex  01 OpenMP.tex  01_MergedCSR.tex  02 pthreads.tex  02_OpenMP.tex  03 Results.tex  03_pthreads.tex  04 Conclusions.tex  04_Results.tex  05_Conclusions.tex  06_Backup.tex  bibliography.bib  main.tex
src/: benchmark.c  benchmark.h  bfs.c  bfs.cpp  bitmap.c  bitmap.h  cli_parser.c  cli_parser.h  config.h  debug_utils.h  frontier.c  frontier.h  graph.c  graph.h  main.cpp  merged_csr.c  merged_csr.h  mmio.c  mmio.h  thread_pool.c  thread_pool.h
thesis/: bibliography.bib  main.tex
yaml_files/: compile.sh  compile.yaml  compile_baldo.yaml  compile_hca.yaml  compile_hpc.yaml  configs.yaml  downloader.sh  jobs.yaml  jobs_baldo.yaml  jobs_brah.yaml  jobs_hca.yaml  (+2 more)
(+29 files in other folders)
